--- a/TodoStitch/Base.lproj/Main.storyboard
+++ b/TodoStitch/Base.lproj/Main.storyboard
@@ -71,34 +71,48 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome to the Stitch ToDo App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zhX-MZ-HJ6">
-                                <rect key="frame" x="16" y="80" width="343" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Please Sign in Below" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83e-aT-mce">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Please Sign in Below" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="83e-aT-mce">
                                 <rect key="frame" x="84" y="152" width="207" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNA-0q-hMr">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hNA-0q-hMr">
                                 <rect key="frame" x="69" y="363" width="237" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Login with Anonymous Credentials"/>
                                 <connections>
                                     <action selector="loginWithAnonymousCredentials:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Kkd-hR-LPc"/>
                                 </connections>
                             </button>
-                            <stackView opaque="NO" contentMode="center" fixedFrame="YES" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="4z5-xM-Hbm">
+                            <stackView opaque="NO" contentMode="center" ambiguous="YES" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="4z5-xM-Hbm">
                                 <rect key="frame" x="56" y="224" width="262" height="104"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Welcome to the Stitch ToDo App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aNm-dY-ebm">
+                                <rect key="frame" x="16" y="76" width="343" height="24"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Or.." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fbx-BL-YBD">
+                                <rect key="frame" x="173" y="336" width="28" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="83e-aT-mce" firstAttribute="top" secondItem="aNm-dY-ebm" secondAttribute="bottom" constant="48" id="172-SJ-rt0"/>
+                            <constraint firstItem="Fbx-BL-YBD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="G5M-oz-T61"/>
+                            <constraint firstItem="Fbx-BL-YBD" firstAttribute="top" secondItem="4z5-xM-Hbm" secondAttribute="bottom" constant="8" id="VsN-17-qZn"/>
+                            <constraint firstItem="aNm-dY-ebm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="60" id="X8G-4k-dyV"/>
+                            <constraint firstItem="hNA-0q-hMr" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="aqy-h7-qIk"/>
+                            <constraint firstItem="83e-aT-mce" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cdC-fb-xkl"/>
+                            <constraint firstItem="hNA-0q-hMr" firstAttribute="top" secondItem="4z5-xM-Hbm" secondAttribute="bottom" constant="35" id="fYL-dX-Cpb"/>
+                            <constraint firstItem="4z5-xM-Hbm" firstAttribute="top" secondItem="83e-aT-mce" secondAttribute="bottom" constant="51" id="qM7-7e-B2p"/>
+                            <constraint firstItem="aNm-dY-ebm" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="usn-EU-AjF"/>
+                            <constraint firstItem="4z5-xM-Hbm" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="vm1-46-lde"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
